Fixed wrong heights for creation modals

--- a/css/daniel-valencia-portfolio.webflow.css
+++ b/css/daniel-valencia-portfolio.webflow.css
@@ -1767,7 +1767,7 @@ figcaption {
 
 .project-form-5 {
   width: 920px;
-  height: 760px;
+  height: 740px;
   background-color: #fff;
   flex-direction: column;
   margin: auto;
@@ -1877,7 +1877,7 @@ figcaption {
 
 .project-form-4 {
   width: 920px;
-  height: 800px;
+  height: 780px;
   background-color: #fff;
   flex-direction: column;
   margin: auto;
